part1/1.11/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hash-pingpong
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            pathType: Prefix
            backend:
              service:
                name: hash-pingpong-svc
                port:
                  number: 2222
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: hash-pingpong-svc
                port:
                  number: 3333
